[gd_scene load_steps=11 format=3 uid="uid://bcikeovr7wfbk"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_2y0i2"]
[ext_resource type="FontFile" uid="uid://bsdutbrstdio7" path="res://fonts/Rubik/static/Rubik-Medium.ttf" id="2_cwp8a"]
[ext_resource type="FontFile" uid="uid://d15asrafrelve" path="res://fonts/Rubik/static/Rubik-Bold.ttf" id="3_u08h8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fvk2u"]

[sub_resource type="Theme" id="Theme_m5emv"]
CheckBox/font_sizes/font_size = 15
CheckBox/fonts/font = ExtResource("2_cwp8a")
CheckButton/font_sizes/font_size = 16
CheckButton/fonts/font = ExtResource("2_cwp8a")
CheckButton/styles/focus = SubResource("StyleBoxEmpty_fvk2u")
LinkButton/colors/font_color = Color(0, 0.87451, 0.87451, 1)
LinkButton/colors/font_hover_color = Color(0.219608, 0.498039, 1, 1)
LinkButton/fonts/font = ExtResource("2_cwp8a")

[sub_resource type="LabelSettings" id="LabelSettings_pgwas"]
font = ExtResource("3_u08h8")
font_size = 24
font_color = Color(0.917647, 0.890196, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gjtlg"]
font = ExtResource("2_cwp8a")
font_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a50u2"]
bg_color = Color(0.32549, 0.0588235, 0.0862745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164976, 0.0159611, 0.0284139, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 1.0
expand_margin_right = 1.0

[sub_resource type="Theme" id="Theme_miqo8"]
Button/colors/font_color = Color(0.615537, 0.145919, 0.197969, 1)
Button/font_sizes/font_size = 17
Button/fonts/font = ExtResource("2_cwp8a")
Button/styles/normal = SubResource("StyleBoxFlat_a50u2")

[sub_resource type="LabelSettings" id="LabelSettings_iqkw2"]
font = ExtResource("2_cwp8a")
font_size = 14

[node name="settings" type="Window"]
title = "Fracton - Settings"
initial_position = 4
size = Vector2i(430, 300)
unresizable = true
extend_to_title = true
theme = SubResource("Theme_m5emv")
script = ExtResource("1_2y0i2")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.27451, 0.415686, 0.45098, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_pgwas")
horizontal_alignment = 1

[node name="MoveHint" type="CheckButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hide move hint:"

[node name="AlwOnTop" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Window always on top:"
label_settings = SubResource("LabelSettings_gjtlg")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AI" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "AI"

[node name="Notes" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Notes"

[node name="Timer" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Timer"

[node name="Draw" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Draw"

[node name="Todo" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ToDo"

[node name="Delete" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_miqo8")
text = "Delete all Data"

[node name="Credits" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Credits:
Code: Qwatrum
Fractal Art: cruzgodar.com
Fonts: Rubik, Anonymous Pro
Icons: Flaticon.com:  Pixel Perfect (Close, Settings),
 Rikas Dzihab (Notes), Ilham Fitrotul Hayat (Timer),
 Freepik (Draw), LAFS (AI), Graphics Plazza (ToDo),
 Creaticca Creative Agency (Links)
Music: Pixabay.com"
label_settings = SubResource("LabelSettings_iqkw2")

[node name="Link" type="LinkButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "my GitHub"
uri = "https://github.com/Qwatrum"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/MoveHint" to="." method="_on_move_hint_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/AI" to="." method="_on_ai_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/Notes" to="." method="_on_notes_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/Timer" to="." method="_on_timer_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/Draw" to="." method="_on_draw_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/Todo" to="." method="_on_todo_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Delete" to="." method="_on_delete_pressed"]
